--- a/LaBuilderApp/Views/ViewBuilders.xaml
+++ b/LaBuilderApp/Views/ViewBuilders.xaml
@@ -3,12 +3,12 @@
 	xmlns:local="clr-namespace:LaBuilderApp">
 	<ContentView.Content>
 	<StackLayout Orientation="Vertical" HeightRequest="3000">
-		<ListView x:Name="lvBuilder" ItemsSource="{x:Static local:Builder.DesignData}" HasUnevenRows="true" IsGroupingEnabled="true" GroupDisplayBinding="{Binding Title}" GroupShortNameBinding="{Binding Title}" IsPullToRefreshEnabled="true" BackgroundColor="Black" SeparatorVisibility="None">
+		<ListView x:Name="lvBuilder" ItemsSource="{x:Static local:Builder.DesignData}" HasUnevenRows="true" IsGroupingEnabled="true" GroupDisplayBinding="{Binding Title}" GroupShortNameBinding="{Binding Title}" IsPullToRefreshEnabled="true" BackgroundColor="Transparent" SeparatorVisibility="None">
 			<ListView.GroupHeaderTemplate>
 				<DataTemplate>
 					<ViewCell Height="20">
-						<StackLayout Orientation="Vertical" Spacing="0" BackgroundColor="#5AA9D3" Padding="6,0">
-							<Label Text="{Binding Title}" Font="Bold" FontSize="14" TextColor="#11252D" HorizontalOptions="Start" YAlign="Center"  />
+						<StackLayout Orientation="Vertical" Spacing="0" BackgroundColor="#335AA9D3" Padding="6,0">
+							<Label Text="{Binding Title}" Font="Bold" FontSize="14" TextColor="#5AA9D3" HorizontalOptions="Start" YAlign="Center"  />
 						</StackLayout>
 					</ViewCell>
 				</DataTemplate>
@@ -17,14 +17,14 @@
 				<DataTemplate>
 						<ViewCell>
 							<ViewCell.View>
-								<StackLayout Orientation="Horizontal" Spacing="0" HeightRequest="80">
-									<Image Source="{Binding AvatarImage}" WidthRequest="80" HeightRequest="80" Aspect="AspectFit" BackgroundColor="White" />
-									<Image Source="{Binding OfficialPictureImage}" WidthRequest="80" HeightRequest="80" Aspect="AspectFit" BackgroundColor="White" />
+								<StackLayout Orientation="Horizontal" Spacing="0" HeightRequest="80" BackgroundColor="#55FFFFFF">
+									<Image Source="{Binding AvatarImage}" WidthRequest="80" HeightRequest="80" Aspect="AspectFit" />
+									<Image Source="{Binding OfficialPictureImage}" WidthRequest="80" HeightRequest="80" Aspect="AspectFit" />
 									<StackLayout Orientation="Vertical" Spacing="0" HorizontalOptions="FillAndExpand" HeightRequest="80">
-										<Label Text="{Binding FullName, StringFormat=' {0}'}" YAlign="Center" HeightRequest="60" HorizontalOptions="FillAndExpand" BackgroundColor="White" TextColor="Black" FontSize="20" LineBreakMode="TailTruncation"/>
-										<Label Text="{Binding Since, StringFormat=' Depuis {0}'}}" YAlign="Center" HeightRequest="20" TextColor="Black" BackgroundColor="White" FontSize="16" LineBreakMode="TailTruncation"/>
+										<Label Text="{Binding FullName, StringFormat=' {0}'}" YAlign="Center" HeightRequest="60" HorizontalOptions="FillAndExpand" TextColor="White" FontSize="20" LineBreakMode="TailTruncation"/>
+										<Label Text="{Binding Since, StringFormat=' Depuis {0}'}}" YAlign="Center" HeightRequest="20" TextColor="White" FontSize="16" LineBreakMode="TailTruncation"/>
 									</StackLayout>
-									<Image Source="{Binding CountryImage}" WidthRequest="30" HeightRequest="30" Aspect="AspectFit" BackgroundColor="White" />
+									<Image Source="{Binding CountryImage}" WidthRequest="30" HeightRequest="30" Aspect="AspectFit" />
 								</StackLayout>
 							</ViewCell.View>
 						</ViewCell>
