--- a/LaBuilderApp/Views/ViewThings.xaml
+++ b/LaBuilderApp/Views/ViewThings.xaml
@@ -3,12 +3,12 @@
 	xmlns:local="clr-namespace:LaBuilderApp">
 	<ContentView.Content>
 	<StackLayout Orientation="Vertical" HeightRequest="3000">
-		<ListView x:Name="lvThing" ItemsSource="{x:Static local:Thing.DesignData}" HasUnevenRows="true" IsGroupingEnabled="true" GroupDisplayBinding="{Binding Title}" IsPullToRefreshEnabled="true" BackgroundColor="Black" SeparatorVisibility="Default">
+		<ListView x:Name="lvThing" ItemsSource="{x:Static local:Thing.DesignData}" HasUnevenRows="true" IsGroupingEnabled="true" GroupDisplayBinding="{Binding Title}" IsPullToRefreshEnabled="true" BackgroundColor="Transparent" SeparatorVisibility="Default">
 			<ListView.GroupHeaderTemplate>
 				<DataTemplate>
 					<ViewCell Height="20">
-						<StackLayout Orientation="Vertical" Spacing="0" BackgroundColor="#5AA9D3" Padding="6,0">
-							<Label Text="{Binding Title}" Font="Bold" FontSize="14" TextColor="#11252D" HorizontalOptions="Start" YAlign="Center"  />
+						<StackLayout Orientation="Vertical" Spacing="0" BackgroundColor="#335AA9D3" Padding="6,0">
+							<Label Text="{Binding Title}" Font="Bold" FontSize="14" TextColor="#5AA9D3" HorizontalOptions="Start" YAlign="Center"  />
 						</StackLayout>
 					</ViewCell>
 				</DataTemplate>
@@ -17,12 +17,12 @@
 				<DataTemplate>
 						<ViewCell>
 							<ViewCell.View>
-								<StackLayout BackgroundColor="White" Orientation="Horizontal" Spacing="0" HeightRequest="100">
-									<Image Source="{Binding PictureImage}" WidthRequest="100" HeightRequest="100" Aspect="AspectFit" BackgroundColor="White" />
+								<StackLayout Orientation="Horizontal" Spacing="0" HeightRequest="100" BackgroundColor="#55FFFFFF">
+									<Image Source="{Binding PictureImage}" WidthRequest="100" HeightRequest="100" Aspect="AspectFit" />
 									<StackLayout Orientation="Vertical" Spacing="0" HorizontalOptions="FillAndExpand" HeightRequest="100" WidthRequest="5000">
-										<Label Text="{Binding Name, StringFormat=' {0}'}" YAlign="Center" HeightRequest="30" HorizontalOptions="FillAndExpand" BackgroundColor="White" TextColor="Black" FontSize="20" LineBreakMode="TailTruncation"/>
-										<Label Text="{Binding Builder, StringFormat=' Builder : {0}'}" YAlign="Center" HeightRequest="30" BackgroundColor="White" TextColor="Black" FontSize="16" LineBreakMode="TailTruncation"/>
-										<Label Text="{Binding DescriptionLabel}" Margin="6,0,0,0" YAlign="Start" HeightRequest="40" BackgroundColor="White" TextColor="Black" FontSize="16" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" LineBreakMode="WordWrap"/>
+										<Label Text="{Binding Name, StringFormat=' {0}'}" YAlign="Center" HeightRequest="30" HorizontalOptions="FillAndExpand" TextColor="White" FontSize="20" LineBreakMode="TailTruncation"/>
+										<Label Text="{Binding Builder, StringFormat=' Builder : {0}'}" YAlign="Center" HeightRequest="30" TextColor="White" FontSize="16" LineBreakMode="TailTruncation"/>
+										<Label Text="{Binding DescriptionLabel}" Margin="6,0,0,0" YAlign="Start" HeightRequest="40" TextColor="White" FontSize="16" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" LineBreakMode="WordWrap"/>
 									</StackLayout>
 								</StackLayout>
 							</ViewCell.View>
