--- a/LaBuilderApp/Views/ViewRadar.xaml
+++ b/LaBuilderApp/Views/ViewRadar.xaml
@@ -2,7 +2,7 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="LaBuilderApp.ViewRadar" 
 	xmlns:local="clr-namespace:LaBuilderApp">
 	<ContentView.Content>
-		<RelativeLayout BackgroundColor="Black" x:Name="theLayout" HorizontalOptions="Fill" VerticalOptions="Fill">
-		</RelativeLayout>
+		<AbsoluteLayout BackgroundColor="#0F1F66FF" x:Name="theLayout" HorizontalOptions="Fill" VerticalOptions="Fill">
+		</AbsoluteLayout>
 	</ContentView.Content>
 </ContentView>
