--- a/LaBuilderApp/Views/ViewCropImage.xaml
+++ b/LaBuilderApp/Views/ViewCropImage.xaml
@@ -3,10 +3,11 @@
 	<ContentView.Content>
 		<ScrollView Orientation="Vertical">
 			<StackLayout Orientation="Vertical">
-				<Button x:Name="btTest" Text="test" />
-				<Entry x:Name="theText" Keyboard="Text" />
+				<Label Text="Légende de l'image" />
+				<Entry x:Name="theText" Keyboard="Text" TextColor="White" BackgroundColor="Black" />
+				<Button x:Name="btTest" Text="Choisir l'image" />
 				<Image x:Name="theImage" Aspect="AspectFit"/>
-				<Button x:Name="btSend" Text="Upload" />
+				<Button x:Name="btSend" Text="Sauvegarder" />
 			</StackLayout>
 		</ScrollView>
 	</ContentView.Content>
